add previous history request based on first synced item position and first visible item position.
 For cases there are a lot of local history - condition based on "near top" scrolling not working.